--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 <div class="date" id="today"></div>
   <!-- ロゴ -->
   <header>
-    <img src="images/logo.png" alt="ロゴ" class="logo">
+    <img src="logo.png" alt="ロゴ" class="logo">
     <div class="hamburger" id="hamburger">&#9776;</div>
   </header>
 
@@ -171,12 +171,12 @@
     <h2>Artist</h2>
     <div class="slider-container">
       <div class="slider" id="slider">
-        <div class="slide"><img src="images/char1.png" alt="キャラ1"></div>
-        <div class="slide"><img src="images/char2.png" alt="キャラ2"></div>
-        <div class="slide"><img src="images/char3.png" alt="キャラ3"></div>
-        <div class="slide"><img src="images/char4.png" alt="キャラ4"></div>
-        <div class="slide"><img src="images/char5.png" alt="キャラ5"></div>
-        <div class="slide"><img src="images/char6.png" alt="キャラ6"></div>
+        <div class="slide"><img src="char1.png" alt="キャラ1"></div>
+        <div class="slide"><img src="char2.png" alt="キャラ2"></div>
+        <div class="slide"><img src="char3.png" alt="キャラ3"></div>
+        <div class="slide"><img src="char4.png" alt="キャラ4"></div>
+        <div class="slide"><img src="char5.png" alt="キャラ5"></div>
+        <div class="slide"><img src="char6.png" alt="キャラ6"></div>
       </div>
     </div>
   </section>
